--- a/.github/workflows/Continuous-Deployment.yml
+++ b/.github/workflows/Continuous-Deployment.yml
@@ -3,10 +3,10 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # Aciona o workflow quando houver um push na branch 'main'
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,14 @@ jobs:
         node-version: '20'
 
     - name: Install dependencies
-      run: npm install  
+      run: npm install  # Instala as dependências na raiz do projeto
 
     - name: Build the project
-      run: npm run build 
+      run: npm run build  # Executa o build do projeto
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3  # Ação para deploy no GitHub Pages
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}  # Token de autenticação
+        publish_dir: ./dist  # Diretório de saída gerado pelo build (ajuste conforme necessário)
+        publish_branch: gh-pages  # Nome do branch onde o conteúdo será publicado
