--- a/.github/workflows/Continuous-Deployment.yml
+++ b/.github/workflows/Continuous-Deployment.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Aciona o workflow quando houver um push na branch 'main'
+      - main  
 
 jobs:
   deploy:
@@ -19,14 +19,17 @@ jobs:
         node-version: '20'
 
     - name: Install dependencies
-      run: npm install  # Instala as dependências na raiz do projeto
+      run: pnpm install  
 
     - name: Build the project
-      run: npm run build  # Executa o build do projeto
+      run: pnpm run build  
+
+    - name: List files in dist directory
+      run: ls -la ./dist  
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3  # Ação para deploy no GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3 
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}  # Token de autenticação
-        publish_dir: ./dist  # Diretório de saída gerado pelo build (ajuste conforme necessário)
-        publish_branch: gh-pages  # Nome do branch onde o conteúdo será publicado
+        github_token: ${{ secrets.GITHUB_TOKEN }}  
+        publish_dir: ./dist  
+        publish_branch: gh-pages  
