fix: back to npm

--- a/.github/workflows/Continuous-Deployment.yml
+++ b/.github/workflows/Continuous-Deployment.yml
@@ -19,16 +19,16 @@ jobs:
         node-version: '20'
 
     - name: Install dependencies
-      run: pnpm install  
+      run: npm install  
 
     - name: Build the project
-      run: pnpm run build  
+      run: npm run build  
 
     - name: List files in dist directory
       run: ls -la ./dist  
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3 
+      uses: peaceiris/actions-gh-pages@v3  
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}  
         publish_dir: ./dist  
